feature: Curation Groupings (WIP)

--- a/lang/en.json
+++ b/lang/en.json
@@ -503,7 +503,8 @@
     "errorImportingCuration": "Error import curation '{0}', check logs page for details.",
     "mustBePngImage": "Must be a .PNG Image.",
     "mustBe7zArchiveSkipping": "Must be a .7z archive, skipping {0}",
-    "failedToLoadCuration": "Failed to load curation! {0}"
+    "failedToLoadCuration": "Failed to load curation! {0}",
+    "exportCurationWithWarnings": "Export Curation even though it has Warnings?"
   },
   "libraries": {
     "arcade": "Games",
