--- a/lang/en.json
+++ b/lang/en.json
@@ -81,6 +81,7 @@
     "helpInfo": "Need help? {0}.",
     "help": "Read the manual",
     "upgradesHeader": "Upgrades",
+    "updateFeedHeader": "News Feed",
     "installComplete": "Install Complete",
     "alreadyInstalled": "Already Installed",
     "download": "Download",
