fix: Add commas to the ends of some lines in en.json.

--- a/lang/en.json
+++ b/lang/en.json
@@ -67,8 +67,8 @@
     "extApplications": "Application(s)",
     "saveAndRestart": "Save and Restart",
     "saveAndClose": "Save and Close",
-    "tagFilterGroupEditor": "Tag Filter Group Editor"
-    "disableExtreme": "Disable Extreme Games"
+    "tagFilterGroupEditor": "Tag Filter Group Editor",
+    "disableExtreme": "Disable Extreme Games",
     "disableExtremeDesc": "Hides the option to edit Extreme tag filters, and itself."
   },
   "home": {
