feat: Make Curation from Game
refactor: Store persistant UUID for some actions instead of using folder

feat: Regen UUID of existing Curation

--- a/lang/en.json
+++ b/lang/en.json
@@ -451,7 +451,8 @@
     "exportMetaAndImages": "Export (Meta && Images)",
     "exportMetaEdit": "Export Meta Edit",
     "duplicatePlaylist": "Duplicate Playlist",
-    "exportPlaylist": "Export Playlist"
+    "exportPlaylist": "Export Playlist",
+    "makeCurationFromGame": "Make Curation from Game"
   },
   "dialog": {
     "programNotFound": "Program not found!",
