feat: Extension support for Tasks
feat: Data Pack exporting

refactor: Add symlink setting to config page

feat: Node Sqlite3 interceptor for Exts

--- a/lang/en.json
+++ b/lang/en.json
@@ -16,6 +16,8 @@
     "searchLimitValue": "{0} Results",
     "enableEditing": "Enable Editing",
     "enableEditingDesc": "Enable editing of games and additional applications. Also shows tabs related to editing.",
+    "symlinkCuration": "Symlink Curation Content",
+    "symlinkCurationDesc": "Uses symbolic links to test curations rather than copying files. Faster and supports MAD4FP. Admin rights required.",
     "onDemandImages": "On Demand Images",
     "onDemandImagesDesc": "Download and save missing logos and screenshots as they are needed.",
     "currentLanguage": "Language",
@@ -377,6 +379,7 @@
     "run": "Run",
     "runWithMAD4FP": "Run with MAD4FP",
     "export": "Export",
+    "exportDataPacks": "Export Data Pack",
     "import": "Import",
     "contentFiles": "Content Files",
     "warnings": "Warnings",
