--- a/lang/en.json
+++ b/lang/en.json
@@ -59,6 +59,9 @@
     "serverDesc": "Which Server Process to run at launcher startup.",
     "metadataServerHost": "Metadata Server Host",
     "metadataServerHostDesc": "Host of a metadata server. Used for syncing new and updated game info to the launcher.",
+    "metadataProviderInstances": "Metadata Provider Instances",
+    "metadataProviderInstancesDesc": "Instances of metadata providers. Used for syncing tags and games from external sources.", 
+    "metadataProvider": "Metadata Provider",
     "extensionsHeader": "Extensions",
     "noExtensionsLoaded": "No Extensions loaded, Install them to '{0}'",
     "extDevScripts": "Developer Script(s)",
@@ -89,6 +92,7 @@
     "help": "Read the manual",
     "upgradesHeader": "Upgrades",
     "updateFeedHeader": "News Feed",
+    "metadataUpdatesHeader": "Metadata Updates",
     "installComplete": "Install Complete",
     "alreadyInstalled": "Already Installed",
     "download": "Download",
@@ -104,7 +108,8 @@
     "linuxSupport": "Issues on Linux? {0}",
     "linuxSupportLinkText": "Open FAQ",
     "randomPicks": "Random Picks",
-    "rerollPicks": "Re-Roll Picks"
+    "rerollPicks": "Re-Roll Picks",
+    "checkingForUpdate": "Checking for Update..."
   },
   "logs": {
     "filters": "Filters",
