--- a/lang/en.json
+++ b/lang/en.json
@@ -276,7 +276,7 @@
     "thumbnail": "Thumbnail",
     "screenshot": "Screenshot",
     "dropImageHere": "Drop an image here to add it",
-    "noGameSelected": "No Game Selected",
+    "noGameSelected": "No {0} Selected",
     "clickToSelectGame": "Click on a game to select it.",
     "deleteAdditionalApplication": "Delete Additional Application",
     "deleteGameAndAdditionalApps": "Delete Game (and Additional Applications)",
@@ -506,10 +506,13 @@
   },
   "libraries": {
     "arcade": "Games",
+    "arcadeSingular": "Game",
     "arcadePlural": "All Games",
     "theatre": "Animations",
+    "theatreSingular": "Animation",
     "theatrePlural": "All Animations",
     "auditorium": "NG Auditorium",
+    "auditoriumSingular": "Animation",
     "auditoriumPlural": "All NG Animations"
   },
   "upgrades": {
