--- a/lang/en.json
+++ b/lang/en.json
@@ -428,7 +428,8 @@
     "complete": "Complete",
     "exportMetaEditTitle": "Export Meta Edit",
     "exportMetaEditDesc": "Select all properties to export:",
-    "showImage": "Show Image"
+    "showImage": "Show Image",
+    "searching": "Searching..."
   },
   "menu": {
     "viewThumbnailInFolder": "View Thumbnail in Folder",
