refactor: Detach content tree loading from init

--- a/lang/en.json
+++ b/lang/en.json
@@ -443,7 +443,8 @@
     "exportMetaEditTitle": "Export Meta Edit",
     "exportMetaEditDesc": "Select all properties to export:",
     "showImage": "Show Image",
-    "searching": "Searching..."
+    "searching": "Searching...",
+    "loading": "Loading..."
   },
   "menu": {
     "viewThumbnailInFolder": "View Thumbnail in Folder",
